# ec_lock_smith

./: .gitignore  Cargo.toml  README.md  package.json
api/: Cargo.toml  Dockerfile  README.md  Rocket.toml  SETUP.md
api/public/: index.html
api/public/js/: login.js  register.js
api/public/pages/: console.html
api/src/: lib.rs  main.rs
api/src/db/: mod.rs
api/src/models/: mod.rs
api/src/request_guards/: mod.rs
api/src/routes/: users.rs  vault.rs
api/tests/: ec_secrets_management.http
cli/: .env.tamplate  Cargo.toml  README.md
cli/src/: main.rs
cli/src/config/: mod.rs
cli/src/models/: auth.rs  mod.rs  session.rs
ec_secrets_management/: Cargo.toml
ec_secrets_manager_cli/src/models/: auth.rs
shared/: Cargo.toml
shared/src/db/: mod.rs
shared/src/models/: mod.rs
shared/src/repositories/: mod.rs  quota.rs  users.rs  vault.rs
shared/src/utils/: auth.rs
