[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.38"
tokio = { version = "1.45.0", features = ["full"] }
mongodb = "3.2.3"
serde = "1.0.219"
shared = { path = "../shared" }
bcrypt = "0.17.0"
pasetors = "0.7.4"
prettytable = "0.10.0"
home = "0.5.11"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.140"
chrono = "0.4.41"
